syntax = "proto3";

package ganymede.postoffice;

option go_package = "github.com/jack139/ganymede/ganymede/x/postoffice/types";

// Msg defines the Msg service.
service Msg {
  rpc SendIbcPost (MsgSendIbcPost) returns (MsgSendIbcPostResponse);
}
message MsgSendIbcPost {
  string title            = 5;
  string content          = 6;
  string sentDate         = 7;
  string creator          = 1;
  string port             = 2;
  string channelID        = 3;
  uint64 timeoutTimestamp = 4;
}

message MsgSendIbcPostResponse {}

